--- a/.env.prod
+++ b/.env.prod
@@ -12,3 +12,6 @@ NODE_VERSION=14
 TRAEFIK_WEBSITE_HOST=localhost
 WEBSITE_URL=https://${TRAEFIK_WEBSITE_HOST}
 NODE_TLS_REJECT_UNAUTHORIZED=0
+
+# traefik
+TRAEFIK_TOKEN=68e3fe00-cded-4553-94de-2ce98dce6c85
