--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,29 @@ version: '3.4'
 
 services:
 
+  traefik:
+    image: traefik:v2.4
+    # network_mode: host # 80, 443, 8080
+    command:
+      - --pilot.token=${TRAEFIK_TOKEN}
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./docker/traefik/configs/${CONTAINER_ENV}/traefik.yaml:/etc/traefik/traefik.yaml
+    ports:
+      - 80:80
+      - 443:443
+      - 8080:8080
+
   nginx:
     build:
       context: ./docker/nginx
     restart: on-failure
+    # network_mode: host
     volumes:
       - ./website/:/var/www/website/
       - ./docker/nginx/configs/${CONTAINER_ENV}/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./docker/nginx/configs/${CONTAINER_ENV}/sites/:/etc/nginx/sites-available/:ro
       - ./docker/shared/data/logs/nginx/:/var/log/nginx/
-    # network_mode: host
-    ports:
-      - "3000:3000"
     labels:
       - traefik.enable=true
       - traefik.http.routers.website.rule=Host(`${TRAEFIK_WEBSITE_HOST}`)
