Update dev server

--- a/.env.dev
+++ b/.env.dev
@@ -9,7 +9,7 @@ NODE_VERSION=14
 
 # website
 
-TRAEFIK_WEBSITE_HOST=localhost
+TRAEFIK_WEBSITE_HOST=178.128.192.35
 WEBSITE_URL=https://${TRAEFIK_WEBSITE_HOST}
 NODE_TLS_REJECT_UNAUTHORIZED=0
 
