--- a/.env.prod
+++ b/.env.prod
@@ -7,11 +7,21 @@ PGID=1000
 
 NODE_VERSION=14
 
+# php-cli php-fpm
+
+PHP_VERSION=8.0
+XDEBUG_ENABLED=0
+APP_ENV=dev
+
 # website
 
 TRAEFIK_WEBSITE_HOST=localhost
 WEBSITE_URL=https://${TRAEFIK_WEBSITE_HOST}
 NODE_TLS_REJECT_UNAUTHORIZED=0
+
+# Backend
+TRAEFIK_BACKEND_HOST=api.localhost
+BACKEND_URL=https://${TRAEFIK_BACKEND_HOST}
 
 # traefik
 TRAEFIK_TOKEN=68e3fe00-cded-4553-94de-2ce98dce6c85
