--- a/docker/nginx/configs/prod/nginx.conf
+++ b/docker/nginx/configs/prod/nginx.conf
@@ -30,6 +30,10 @@ http {
   gzip_min_length 256;
   gzip_types text/plain text/css application/json text/xml application/xml text/javascript application/javascript application/x-font-ttf font/opentype image/svg+xml image/x-icon;
 
+  upstream php-upstream {
+    server php-fpm:9000;
+  }
+
   # include /etc/nginx/conf.d/*.conf;
   include /etc/nginx/sites-available/*.conf;
   open_file_cache off;
