--- a/website/package.json
+++ b/website/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@trendyol-js/react-carousel": "^2.0.1",
     "classnames": "^2.3.1",
+    "framer-motion": "^6.2.10",
     "next": "^12.0.9",
     "next-seo": "^4.29.0",
     "react": "^17.0.2",
