Update prod domains

--- a/.env.prod
+++ b/.env.prod
@@ -15,12 +15,12 @@ APP_ENV=dev
 
 # website
 
-TRAEFIK_WEBSITE_HOST=localhost
+TRAEFIK_WEBSITE_HOST=finhubss.com
 WEBSITE_URL=https://${TRAEFIK_WEBSITE_HOST}
 NODE_TLS_REJECT_UNAUTHORIZED=0
 
 # Backend
-TRAEFIK_BACKEND_HOST=api.localhost
+TRAEFIK_BACKEND_HOST=api.finhubss.com
 BACKEND_URL=https://${TRAEFIK_BACKEND_HOST}
 
 # traefik
