--- a/docker/nginx/configs/dev_local/sites/website.conf
+++ b/docker/nginx/configs/dev_local/sites/website.conf
@@ -6,10 +6,12 @@ server {
 
     root /var/www/website/out;
     index index.html;
+    error_page 404 403 500 503 /404/;
 
     location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
         expires 10d;
     }
+
 
     error_log /var/log/nginx/error.website.log;
     access_log /var/log/nginx/access.website.log;
