--- a/docker/nginx/configs/prod/sites/website.conf
+++ b/docker/nginx/configs/prod/sites/website.conf
@@ -6,6 +6,7 @@ server {
 
     root /var/www/website/out;
     index index.html;
+    error_page 404 403 500 503 /404/;
 
     location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
         expires 10d;
