--- a/docker/nginx/configs/prod/sites/website.conf
+++ b/docker/nginx/configs/prod/sites/website.conf
@@ -8,8 +8,9 @@ server {
     index index.html;
     error_page 404 403 500 503 /404/;
 
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
-        expires 10d;
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg)$ {
+        expires 3d;
+        add_header Cache-Control "public, max-age=259200, no-transform";
     }
 
     error_log /var/log/nginx/error.website.log;
