--- a/docker/nginx/configs/dev_local/sites/website.conf
+++ b/docker/nginx/configs/dev_local/sites/website.conf
@@ -9,8 +9,8 @@ server {
     error_page 404 403 500 503 /404/;
 
     location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg)$ {
-        expires 3d;
-        add_header Cache-Control "public, max-age=259200, no-transform";
+        expires 10d;
+        add_header Cache-Control "public, max-age=864000, immutable, no-transform";
     }
 
     error_log /var/log/nginx/error.website.log;
