--- a/.env.dev_local
+++ b/.env.dev_local
@@ -13,6 +13,8 @@ PHP_VERSION=8.0
 XDEBUG_ENABLED=0
 APP_ENV=dev
 
+SMTP_PASSWORD_FILE=./docker/shared/secrets/smtp_password
+
 # website
 
 TRAEFIK_WEBSITE_HOST=localhost
