--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,7 +78,8 @@ services:
         - NODE_VERSION=${NODE_VERSION}
     volumes:
       - ./website/:/var/www/website/
-    network_mode: host
+    ports:
+      - 3000:3000
     environment:
       - NODE_TLS_REJECT_UNAUTHORIZED
     command: bash -c "cd /var/www/website && tail -f"
