Google and hotjar analytics and build

--- a/website/.eslintrc
+++ b/website/.eslintrc
@@ -1,11 +1,14 @@
 {
   // Configuration for JavaScript files
   "extends": [
+    "next",
     "airbnb-base",
     "next/core-web-vitals",
     "plugin:prettier/recommended"
   ],
   "rules": {
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off",
     "prettier/prettier": [
       "error",
       {
