--- a/website/package.json
+++ b/website/package.json
@@ -15,12 +15,14 @@
   },
   "dependencies": {
     "@trendyol-js/react-carousel": "^2.0.1",
+    "@types/gtag.js": "^0.0.11",
     "classnames": "^2.3.1",
     "framer-motion": "^6.2.10",
     "next": "^12.0.9",
     "next-seo": "^4.29.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hotjar": "^5.1.0",
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
   "devDependencies": {
