--- a/website/package.json
+++ b/website/package.json
@@ -23,6 +23,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-hotjar": "^5.1.0",
+    "react-use-downloader": "^1.1.7",
     "styled-jsx-plugin-postcss": "^4.0.1"
   },
   "devDependencies": {
